# FightCue

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  flutter-ci.yml
archive/python-starter/: README.md  README.original.md  gitignore.original  pyproject.toml
archive/python-starter/src/fightcue/: __init__.py  app.py
archive/python-starter/tests/: test_smoke.py
backend/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_user_state.sql  002_user_push_devices.sql
backend/scripts/: start-local-postgres.sh  stop-local-postgres.sh  verify-required-postgres.sh
backend/src/: app.ts  index.ts
backend/src/config/: demo-state.ts  device-auth.ts  http.ts  monetization-providers.ts  persistence.ts  push-delivery.ts  push-worker.ts
backend/tests/: app.test.ts
docs/: 01_product_vision.md  02_mvp_scope.md  03_architecture.md  04_delivery_plan.md  05_open_questions.md  06_source_channels.md  07_user_data_privacy_and_ads.md  08_ux_ui_direction.md  09_domain_data_model.md
infra/: docker-compose.yml
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: ad_runtime_test.dart  alerts_screen_test.dart  app_diagnostics_test.dart  app_shell_test.dart  domain_models_test.dart  event_detail_screen_test.dart  event_summary_utils_test.dart  fightcue_api_test.dart  following_screen_test.dart  mobile_release_readiness_test.dart  paywall_screen_test.dart  rankings_screen_test.dart  settings_screen_test.dart  smoke_test.dart  test_fakes.dart  widget_test.dart
(+163 files in other folders)
